<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mis_formularios"
            android:icon="@drawable/form"
            android:title="@string/menu_mis_formularios" />
        <item
            android:id="@+id/nav_informes"
            android:icon="@drawable/informe"
            android:title="@string/menu_informes" />
        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/config"
            android:title="@string/menu_ajustes" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_bracket_icon_149439"
            android:title="@string/menu_logout" />
    </group>
</menu>